syntax = "proto3";

package ionscale.v1;
option go_package = "github.com/jsiebens/ionscale/pkg/gen/ionscale/v1;ionscalev1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

import "ionscale/v1/version.proto";
import "ionscale/v1/auth.proto";
import "ionscale/v1/tailnets.proto";
import "ionscale/v1/auth_methods.proto";
import "ionscale/v1/auth_filter.proto";
import "ionscale/v1/auth_keys.proto";
import "ionscale/v1/machines.proto";
import "ionscale/v1/routes.proto";
import "ionscale/v1/dns.proto";
import "ionscale/v1/acl.proto";
import "ionscale/v1/derp.proto";

service IonscaleService {
  rpc GetVersion (GetVersionRequest) returns (GetVersionResponse) {}

  rpc Authenticate (AuthenticationRequest) returns (stream AuthenticationResponse) {}

  rpc GetDERPMap (GetDERPMapRequest) returns (GetDERPMapResponse) {}
  rpc SetDERPMap (SetDERPMapRequest) returns (SetDERPMapResponse) {}

  rpc CreateAuthMethod (CreateAuthMethodRequest) returns (CreateAuthMethodResponse) {}
  rpc ListAuthMethods (ListAuthMethodsRequest) returns (ListAuthMethodsResponse) {}

  rpc CreateAuthFilter (CreateAuthFilterRequest) returns (CreateAuthFilterResponse) {}
  rpc DeleteAuthFilter (DeleteAuthFilterRequest) returns (DeleteAuthFilterResponse) {}
  rpc ListAuthFilters (ListAuthFiltersRequest) returns (ListAuthFiltersResponse) {}

  rpc CreateTailnet (CreateTailnetRequest) returns (CreateTailnetResponse) {}
  rpc GetTailnet (GetTailnetRequest) returns (GetTailnetResponse) {}
  rpc ListTailnets (ListTailnetRequest) returns (ListTailnetResponse) {}
  rpc DeleteTailnet (DeleteTailnetRequest) returns (DeleteTailnetResponse) {}

  rpc GetDNSConfig (GetDNSConfigRequest) returns (GetDNSConfigResponse) {}
  rpc SetDNSConfig (SetDNSConfigRequest) returns (SetDNSConfigResponse) {}

  rpc GetACLPolicy (GetACLPolicyRequest) returns (GetACLPolicyResponse) {}
  rpc SetACLPolicy (SetACLPolicyRequest) returns (SetACLPolicyResponse) {}

  rpc GetAuthKey (GetAuthKeyRequest) returns (GetAuthKeyResponse) {}
  rpc CreateAuthKey (CreateAuthKeyRequest) returns (CreateAuthKeyResponse) {}
  rpc DeleteAuthKey (DeleteAuthKeyRequest) returns (DeleteAuthKeyResponse) {}
  rpc ListAuthKeys (ListAuthKeysRequest) returns (ListAuthKeysResponse) {}

  rpc ListMachines (ListMachinesRequest) returns (ListMachinesResponse) {}
  rpc ExpireMachine(ExpireMachineRequest) returns (ExpireMachineResponse) {}
  rpc DeleteMachine(DeleteMachineRequest) returns (DeleteMachineResponse) {}

  rpc GetMachineRoutes (GetMachineRoutesRequest) returns (GetMachineRoutesResponse) {}
  rpc SetMachineRoutes (SetMachineRoutesRequest) returns (GetMachineRoutesResponse) {}
}
