syntax = "proto3";

package ionscale.v1;
option go_package = "github.com/jsiebens/ionscale/pkg/gen/ionscale/v1;ionscalev1";

message Tailnet {
  uint64 id = 1;
  string name = 2;
}

message CreateTailnetRequest {
  string name = 1;
}

message CreateTailnetResponse {
  Tailnet tailnet = 1;
}

message GetTailnetRequest {
  uint64 id = 1;
}

message GetTailnetResponse {
  Tailnet tailnet = 1;
}

message ListTailnetRequest {
}

message ListTailnetResponse {
  repeated Tailnet tailnet = 1;
}

message DeleteTailnetRequest {
  uint64 tailnet_id = 1;
  bool force = 2;
}

message DeleteTailnetResponse {}